// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`files handler > should accept valid multiple files upload request 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "multiple/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "signedUrl": "signed-url-placeholder",
    },
    {
      "file": {
        "name": "file2.png",
        "objectInfo": {
          "key": "multiple/file2.png",
          "metadata": {},
        },
        "size": 400000,
        "type": "image/png",
      },
      "signedUrl": "signed-url-placeholder",
    },
  ],
  "metadata": {},
  "method": "put",
}
`;

exports[`files handler > should accept valid single file upload request 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "single/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "signedUrl": "signed-url-placeholder",
    },
  ],
  "metadata": {},
  "method": "put",
}
`;

exports[`files handler > should accept valid upload with custom bucket 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "custom/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "signedUrl": "signed-url-placeholder",
    },
  ],
  "metadata": {},
  "method": "put",
}
`;

exports[`multipart handler > should accept valid multiple files upload request 1`] = `
{
  "metadata": {},
  "multipart": {
    "files": [
      {
        "abortSignedUrl": "abort-signed-url-placeholder",
        "completeSignedUrl": "complete-signed-url-placeholder",
        "file": {
          "name": "file1.jpg",
          "objectInfo": {
            "key": "multiple/file1.jpg",
            "metadata": {},
          },
          "size": 500000,
          "type": "image/jpeg",
        },
        "parts": [
          {
            "partNumber": 1,
            "signedUrl": "signed-url-placeholder",
            "size": 500000,
          },
        ],
        "uploadId": "mock-upload-id",
      },
      {
        "abortSignedUrl": "abort-signed-url-placeholder",
        "completeSignedUrl": "complete-signed-url-placeholder",
        "file": {
          "name": "file2.png",
          "objectInfo": {
            "key": "multiple/file2.png",
            "metadata": {},
          },
          "size": 400000,
          "type": "image/png",
        },
        "parts": [
          {
            "partNumber": 1,
            "signedUrl": "signed-url-placeholder",
            "size": 400000,
          },
        ],
        "uploadId": "mock-upload-id",
      },
    ],
    "partSize": 52428800,
  },
}
`;

exports[`multipart handler > should accept valid single file upload request 1`] = `
{
  "metadata": {},
  "multipart": {
    "files": [
      {
        "abortSignedUrl": "abort-signed-url-placeholder",
        "completeSignedUrl": "complete-signed-url-placeholder",
        "file": {
          "name": "file1.jpg",
          "objectInfo": {
            "key": "single/file1.jpg",
            "metadata": {},
          },
          "size": 500000,
          "type": "image/jpeg",
        },
        "parts": [
          {
            "partNumber": 1,
            "signedUrl": "signed-url-placeholder",
            "size": 500000,
          },
        ],
        "uploadId": "mock-upload-id",
      },
    ],
    "partSize": 52428800,
  },
}
`;

exports[`multipart handler > should accept valid upload with custom bucket 1`] = `
{
  "metadata": {},
  "multipart": {
    "files": [
      {
        "abortSignedUrl": "abort-signed-url-placeholder",
        "completeSignedUrl": "complete-signed-url-placeholder",
        "file": {
          "name": "file1.jpg",
          "objectInfo": {
            "key": "custom/file1.jpg",
            "metadata": {},
          },
          "size": 500000,
          "type": "image/jpeg",
        },
        "parts": [
          {
            "partNumber": 1,
            "signedUrl": "signed-url-placeholder",
            "size": 500000,
          },
        ],
        "uploadId": "mock-upload-id",
      },
    ],
    "partSize": 52428800,
  },
}
`;

exports[`uploadMethod handler > should accept valid multiple files upload request with POST method 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "multiple-post/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "postForm": "post-form-placeholder",
    },
    {
      "file": {
        "name": "file2.png",
        "objectInfo": {
          "key": "multiple-post/file2.png",
          "metadata": {},
        },
        "size": 400000,
        "type": "image/png",
      },
      "postForm": "post-form-placeholder",
    },
  ],
  "metadata": {},
  "method": "post",
}
`;

exports[`uploadMethod handler > should accept valid single file upload request with POST method 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "single-post/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "postForm": "post-form-placeholder",
    },
  ],
  "metadata": {},
  "method": "post",
}
`;

exports[`uploadMethod handler > should accept valid single file upload request with PUT method 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "single-put/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "signedUrl": "signed-url-placeholder",
    },
  ],
  "metadata": {},
  "method": "put",
}
`;

exports[`uploadMethod handler > should accept valid upload with custom bucket using POST method 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "custom-post/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "postForm": "post-form-placeholder",
    },
  ],
  "metadata": {},
  "method": "post",
}
`;

exports[`uploadMethod handler > should default to PUT method when uploadMethod is not specified 1`] = `
{
  "files": [
    {
      "file": {
        "name": "file1.jpg",
        "objectInfo": {
          "key": "default/file1.jpg",
          "metadata": {},
        },
        "size": 500000,
        "type": "image/jpeg",
      },
      "signedUrl": "signed-url-placeholder",
    },
  ],
  "metadata": {},
  "method": "put",
}
`;
